# explain-codebase

./: .gitignore  1  INSTRUCTIONS.md  README.md  README_md.md  explain_this_codebase.py  pyproject.toml  pyproject_toml.md  requirements.txt  uv_lock.md
.codebase_explained/: explain_this_codebase.md
explain_codebase/: __main__.py  local_repository.py  remote_repository.py  styles.py
explain_codebase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
