[project]
name = "master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "langchain>=1.2.12",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
explain_codebase = "explain_codebase.__main__:main"
